2020-12-30  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-term.c (pop_active_class): Return a status code.
	(pk_term_end_class): Adapt to new interface.

2020-12-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (struct pk_term_if): Change end_class_fn
	prototype to return an error code.
	* poke/pk-term.c (pk_term_end_class): Likewise.
	(dispose_active_classes): New function.
	(push_active_class): Likewise.
	(pop_active_class): Likewise.
	(pk_term_class): Push the class.
	(pk_term_end_class): Check for the class, then pop it.
	* testsuite/poke.libpoke/term-if.h (pk_term_end_class): Likewise.
	* libpoke/pvm.jitter (endsc): Raise an exception if the given
	class is invalid.
	* testsuite/poke.pkl/term-class-1.pk: New test.
	* testsuite/poke.pkl/term-class-2.pk: Likewise.
	* testsuite/poke.pkl/term-class-3.pk: Likewise.
	* testsuite/poke.pkl/term-hl-1.pk: Likewise.
	* testsuite/poke.pkl/term-hl-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_val_initialize): New function.
	(string_value): New variable.
	(void_type): Likewise.
	(any_type): Likewise.
	(pvm_make_string_type): Reuse unitary value.
	(pvm_make_void_type): Likewise.
	(pvm_make_any_type): Likewise.
	(pvm_val_finalize): Likewise.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (@:.vm profile): New section.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (Building with profiling support): New section.
	* HACKING: Regenerate.
	* DEV-NEWS: Update.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.h: Prototype for pvm_ref_struct_cstr.
	* libpoke/pvm-val.c (pvm_ref_struct_cstr): New function.
	(pvm_ref_struct): Rewrite to use pvm_ref_struct_cstr.
	* libpoke/pvm.jitter (PVM_RAISE_DIRECT): Use pvm_ref_struct_cstr.
	(pushe): Likewise.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter: Store exception structs in the exceptions